[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/dialogue_parser.gd" type="Script" id=1]
[ext_resource path="res://scenes/Dialogue_Panel.gd" type="Script" id=2]
[ext_resource path="res://scenes/label_style.tres" type="StyleBox" id=3]

[node name="scene" type="Node" index="0"]

[node name="dialogue_parser" type="Node" parent="." index="0"]

script = ExtResource( 1 )
_sections_unfolded = [ "Pause" ]
file_name = "test_dialogues.json"
output = NodePath("../Output")

[node name="Output" type="Control" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )

[node name="Background" type="TextureRect" parent="Output" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 0
_sections_unfolded = [ "Anchor", "Margin", "Size Flags" ]

[node name="CharacterImage" type="TextureRect" parent="Output" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 287.0
margin_top = 50.0
margin_right = -323.0
margin_bottom = -158.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
expand = true
stretch_mode = 6
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="Dialogue_Panel" type="Panel" parent="Output" index="2"]

anchor_left = 0.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = -226.0
margin_right = -4.0
margin_bottom = -6.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="NextButton" type="Button" parent="Output/Dialogue_Panel" index="0"]

anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -78.0
margin_top = -58.0
margin_right = -6.0
margin_bottom = -8.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1
_sections_unfolded = [ "Anchor", "Margin", "Size Flags" ]

[node name="TextLabel" type="RichTextLabel" parent="Output/Dialogue_Panel" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 6.0
margin_top = 42.0
margin_right = -6.0
margin_bottom = 148.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 11
size_flags_vertical = 1
custom_styles/normal = ExtResource( 3 )
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "Texto aqui"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = true
_sections_unfolded = [ "Anchor", "BBCode", "Margin", "custom_styles" ]

[node name="NameLabel" type="Label" parent="Output/Dialogue_Panel" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 6.0
margin_top = 12.0
margin_right = -747.0
margin_bottom = 38.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 11
size_flags_vertical = 4
custom_styles/normal = ExtResource( 3 )
text = "nome"
autowrap = true
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "custom_styles" ]

[node name="HBoxContainer" type="HBoxContainer" parent="Output/Dialogue_Panel" index="3"]

anchor_left = 0.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_top = -58.0
margin_right = -87.0
margin_bottom = -8.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="Button" type="Button" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_top = 7.0
margin_right = 135.0
margin_bottom = 67.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "intro"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="ButtonCity" type="Button" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 145.0
margin_top = 7.0
margin_right = 272.0
margin_bottom = 67.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "city"
flat = false
align = 1
_sections_unfolded = [ "Margin", "Rect" ]

[connection signal="pressed" from="Output/Dialogue_Panel/NextButton" to="dialogue_parser" method="parse_dialogue"]

[connection signal="pressed" from="Button" to="dialogue_parser" method="start_dialogue" binds= [ "intro" ]]

[connection signal="pressed" from="ButtonCity" to="dialogue_parser" method="start_dialogue" binds= [ "city" ]]


